@@ -1,5 +1,9 @@
 2000-05-09  Dave Peticolas  <peticola@cs.ucdavis.edu>
 
+	* src/gnome/dialog-add.c (gnc_ui_accWindow_create_account): insert
+	the account *after* setting the account values so the sort order
+	is correct.
+
 	* src/engine/Account.c (xaccAccountInsertSplit): check the currency
 	before inserting.
 
